starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__irrefutable_let_pattern.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn swap(pair: (i64, bool)) -> (bool, i64) {\n    let (number, flag) = pair;\n    (flag, number)\n}\n"
---
T-Fn: swap => (bool, i64)
  T-Let: {pair: (i64, bool), swap: fn(pair: (i64, bool)) -> (bool, i64)} ⊢ let (number, flag) = pair; ⇒ (i64, bool)
    T-Var: {pair: (i64, bool), swap: fn(pair: (i64, bool)) -> (bool, i64)} ⊢ pair ⇒ (i64, bool)
    Unify-Tuple: (i64, bool) ~ (t3, t4) => {bool/t4, i64/t3}
      Unify-Var: i64 ~ t3 => {i64/t3}
      Unify-Var: bool ~ t4 => {bool/t4}
  T-ReturnTail: (flag, number) => (bool, i64)
    T-Tuple: {flag: bool, number: i64, pair: (i64, bool), swap: fn(pair: (i64, bool)) -> (bool, i64)} ⊢ (flag, number) ⇒ (bool, i64)
      T-Var: {flag: bool, number: i64, pair: (i64, bool), swap: fn(pair: (i64, bool)) -> (bool, i64)} ⊢ flag ⇒ bool
      T-Var: {flag: bool, number: i64, pair: (i64, bool), swap: fn(pair: (i64, bool)) -> (bool, i64)} ⊢ number ⇒ i64
    Unify-Tuple: (bool, i64) ~ (bool, i64) => {}
      Unify-Const: bool ~ bool => {}
      Unify-Const: i64 ~ i64 => {}
