starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__let_binding_traces.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    let answer = 42;\n    let foo: i64 = 10;\n    let bar: bool = false;\n    let baz: i8 = 2;\n}\n"
---
T-Fn: test => ()
  T-Let: {test: fn() -> ()} ⊢ let answer = 42; ⇒ i64
    T-Int: {test: fn() -> ()} ⊢ 42 ⇒ i64
  T-Let: {answer: i64, test: fn() -> ()} ⊢ let foo: i64 = 10; ⇒ i64
    T-Int: {answer: i64, test: fn() -> ()} ⊢ 10 ⇒ i64
    Unify-Var: i64 ~ i64 => {i64/t4}
  T-Let: {answer: i64, foo: i64, test: fn() -> ()} ⊢ let bar: bool = false; ⇒ bool
    T-Bool: {answer: i64, foo: i64, test: fn() -> ()} ⊢ false ⇒ bool
    Unify-Const: bool ~ bool => {}
  T-Let: {answer: i64, bar: bool, foo: i64, test: fn() -> ()} ⊢ let baz: i8 = 2; ⇒ i8
    T-Int: {answer: i64, bar: bool, foo: i64, test: fn() -> ()} ⊢ 2 ⇒ i64
    Unify-Var: i8 ~ i64 => {i8/t5}
