starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__local_assignment_without_disclose_ok.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn main() {\n    let mut counter: i64 = 0;\n    counter = 1;\n}\n"
---
T-Fn: main => ()
  T-Let: {main: fn() -> () [main]} ⊢ let mut counter: i64 = 0; ⇒ i64
    T-Int: {main: fn() -> () [main]} ⊢ 0 ⇒ i64
    Unify-Var: i64 ~ i64 => {i64/t3}
  T-Assign: {counter: i64, main: fn() -> () [main]} ⊢ counter = 1; ⇒ i64
    T-Int: {counter: i64, main: fn() -> () [main]} ⊢ 1 ⇒ i64
    Unify-Var: i64 ~ i64 => {i64/t4}
